--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,5 +19,7 @@
     "moduleResolution": "node",
     "esModuleInterop": true,
     "skipLibCheck": true
-  }
+  },
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules", "dist"]
 }
